# cohort-scheduler

./: .gitignore  README.md  pyproject.toml
cohort_scheduler/: scheduler.py
