[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cohort-scheduler"
version = "0.1.0"
description = "Stochastic greedy scheduling for matching people into cohorts based on availability"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.urls]
Homepage = "https://github.com/cpdally/cohort-scheduler"
